--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">TWIPEE</string>
     <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
+
+    <string name="user_post_review_hint">여행을 기록해 보세요...</string>
+    <string name="user_post_plan_hint">여행을 계획해 보세요...</string>
+    <string name="follow_tab_1">follower</string>
+    <string name="follow_tab_2">following</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
