--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,16 @@
     <string name="user_post_plan_hint">여행을 계획해 보세요...</string>
     <string name="follow_tab_1">follower</string>
     <string name="follow_tab_2">following</string>
+
+    <string name="tab_text_1">SNS</string>
+    <string name="tab_text_2">TripTalk</string>
+    <string name="tab_text_3">NearFacility</string>
+    <string name="tab_text_4">Userinfo</string>
+
+    <string name="board_camera">Camera</string>
+    <string name="board_babycar">Babycar</string>
+    <string name="board_baggage">Baggage</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
